test(recipes): Delete recipes before retrieving empty list
Related to #44
